--- a/autres/lineup.html
+++ b/autres/lineup.html
@@ -16,7 +16,7 @@
 <!-- ============ header ========== -->
     <header>
          <div class="navbar">
-            <img src="../assets/img/menu-btn.png" alt="" class="menu-btn">
+            <img src="../assets/img/toggle-white.png" alt="" class="menu-btn">
             <div class="menu-container">
                 <div class="nav-links mb-5">
                     <ul>
@@ -45,7 +45,7 @@
                 <a href="../autres/sunday.html"><div class="prog-btn col colx border rounded-5 m-3 p-2">Sunday 3rd </div></a>
             </div>
             <br>
-            <div class=" row  row-cols-1 row-cols-md-3 row-cols-lg-6 d-flex justify-content-center mt-5 me-5 ms-5 me-5  p-2">
+            <div class=" row  row-cols-3 row-cols-md-4 row-cols-lg-6 d-flex justify-content-center  m-lg-5">
                 <div class="col colx m-3">
                     <a href="./star/1plike140.html"> <img src="../assets/img/1plike140.jpg" alt="1plike140" class="rounded-circle  ">
                     <p>1plike Prime</p></a>
@@ -117,115 +117,115 @@
         </div>
         <br>
         <br>
-        <div class=" text-center text-white bg-black p-5 rounded-3 vw-100 wh-100">
+        <div class=" text-center text-black bg-white p-5 vw-100 wh-100">
             <div class="  m-5">
                 <h1>SCHEDULE</h1>
             </div>
 
-            <div class="m-5">
-                <table class="table table-bordered ">
+            <div>
+                <table class="table table-bordered">
                     <thead>
                         <tr>
-                            <th>TIME</th>
-                            <th>FRI. 1</th>
-                            <th>SAT. 2</th>
-                            <th>SUN. 3</th>
+                            <th class="bg-black text-white">TIME</th>
+                            <th class="bg-black text-white">FRI. 1</th>
+                            <th class="bg-black text-white">SAT. 2</th>
+                            <th class="bg-black text-white">SUN. 3</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr >
-                            <td> 1PM</td>
-                            <td class="table-success"> Open</td>
-                            <td class="table-success"> Open</td>
-                            <td class="table-success"> Open</td>
+                            <td class="bg-black text-white"> 1PM</td>
+                            <td class=" bg-primary text-white"> Open</td>
+                            <td class="bg-primary text-white"> Open</td>
+                            <td class="bg-primary text-white"> Open</td>
                         </tr>
                     </tbody>
                     <tbody>
                         <tr>
-                            <td> 2PM - 3PM</td>
-                            <td> </td>
-                            <td> </td>
-                            <td> </td>
+                            <td class="bg-black text-white"> 2PM - 3PM</td>
+                            <td class="bg-black text-white"> </td>
+                            <td class="bg-black text-white"> </td>
+                            <td class="bg-black text-white"> </td>
                         </tr>
                     </tbody>
                     <tbody>
                         <tr>
-                            <td> 3PM - 4PM</td>
-                            <td> </td>
-                            <td> </td>
-                            <td> </td>
+                            <td class="bg-black text-white"> 3PM - 4PM</td>
+                            <td class="bg-black text-white"> </td>
+                            <td class="bg-black text-white"> </td>
+                            <td class="bg-black text-white"> </td>
                         </tr>
                     </tbody>
                     <tbody>
                         <tr>
-                            <td> 4PM - 5PM</td>
-                            <td> </td>
-                            <td> </td>
-                            <td> </td>
+                            <td class="bg-black text-white"> 4PM - 5PM</td>
+                            <td class="bg-black text-white"> </td>
+                            <td class="bg-black text-white"> </td>
+                            <td class="bg-black text-white"> </td>
                         </tr>
                     </tbody>
                     <tbody>
                         <tr>
-                            <td> 5PM - 6PM</td>
-                            <td> </td>
-                            <td> </td>
-                            <td> </td>
+                            <td class="bg-black text-white"> 5PM - 6PM</td>
+                            <td class="bg-black text-white"> </td>
+                            <td class="bg-black text-white"> </td>
+                            <td class="bg-black text-white"> </td>
                         </tr>
                     </tbody>
                     <tbody>
                         <tr>
-                            <td> 6PM - 7PM</td>
-                            <td> </td>
-                            <td> </td>
-                            <td> </td>
+                            <td class="bg-black text-white"> 6PM - 7PM</td>
+                            <td class="bg-black text-white"> </td>
+                            <td class="bg-black text-white"> </td>
+                            <td class="bg-black text-white"> </td>
                         </tr>
                     </tbody>
                     <tbody>
                         <tr>
-                            <td> 7PM - 8PM</td>
-                            <td> </td>
-                            <td> </td>
-                            <td> </td>
+                            <td class="bg-black text-white"> 7PM - 8PM</td>
+                            <td class="bg-black text-white"> </td>
+                            <td class="bg-black text-white"> </td>
+                            <td class="bg-black text-white"> </td>
                         </tr>
                     </tbody>
                     <tbody>
                         <tr>
-                            <td> 8PM - 9PM</td>
-                            <td> </td>
-                            <td> </td>
-                            <td> </td>
+                            <td class="bg-black text-white"> 8PM - 9PM</td>
+                            <td class="bg-black text-white"> </td>
+                            <td class="bg-black text-white"> </td>
+                            <td class="bg-black text-white"> </td>
                         </tr>
                     </tbody>
                     <tbody>
                         <tr>
-                            <td> 9PM - 10PM</td>
-                            <td> </td>
-                            <td> </td>
-                            <td> </td>
+                            <td class="bg-black text-white"> 9PM - 10PM</td>
+                            <td class="bg-black text-white"> </td>
+                            <td class="bg-black text-white"> </td>
+                            <td class="bg-black text-white"> </td>
                         </tr>
                     </tbody>
                     <tbody>
                         <tr>
-                            <td> 10PM - 11PM</td>
-                            <td> </td>
-                            <td> </td>
-                            <td> </td>
+                            <td class="bg-black text-white"> 10PM - 11PM</td>
+                            <td class="bg-black text-white"> </td>
+                            <td class="bg-black text-white"> </td>
+                            <td class="bg-black text-white"> </td>
                         </tr>
                     </tbody>
                     <tbody>
                         <tr>
-                            <td> 11PM - 12PM</td>
-                            <td> </td>
-                            <td> </td>
-                            <td> </td>
+                            <td class="bg-black text-white"> 11PM - 12PM</td>
+                            <td class="bg-black text-white"> </td>
+                            <td class="bg-black text-white"> </td>
+                            <td class="bg-black text-white"> </td>
                         </tr>
                     </tbody>
                     <tbody>
                         <tr>
-                            <td> 1AM</td>
-                            <td class="table-danger"> Closed</td>
-                            <td class="table-danger"> Closed</td>
-                            <td class="table-danger"> Closed</td>
+                            <td class="bg-black text-white"> 1AM</td>
+                            <td class="bg-danger text-white"> Closed</td>
+                            <td class="bg-danger text-white"> Closed</td>
+                            <td class="bg-danger text-white"> Closed</td>
                         </tr>
                     </tbody>
                 </table>
