--- a/autres/sunday.html
+++ b/autres/sunday.html
@@ -17,7 +17,7 @@
 <!-- ============ header ========== -->
 <header>
   <div class="navbar">
-    <img src="../assets/img/menu-btn.png" alt="" class="menu-btn">
+    <img src="../assets/img/toggle-white.png" alt="" class="menu-btn">
     <div class="menu-container">
       <div class="nav-links mb-5">
         <ul>
@@ -84,7 +84,7 @@
     </div>
 
     <div class="container mt-5">
-      <table class="table table-bordered">
+      <table class="table table-bordered table-dark">
         <thead>
         <tr>
           <th>TIME</th>
