--- a/autres/benevole.html
+++ b/autres/benevole.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -11,62 +11,98 @@
   <link rel="stylesheet" href="../assets/style.css">
   <script src="../assets/index.js" defer></script>
 </head>
+
 <body>
 <!-- ============ header ========== -->
-<div class="navbar">
-  <div class="menu-container">
-    <div class="nav-links">
-      <ul>
-        <li><a href="../index.html">ACCUEIL</a></li>
-        <li><a href="../autres/ticket.html">TICKET</a></li>
-        <li><a href="lineup.html">PROGRAMMATION</a></li>
-        <li><a href="../autres/benevole.html">BÉNÉVOLE</a></li>
-        <li><a href="../autres/infos.html">INFOS</a></li>
-      </ul>
+<header>
+  <div class="navbar">
+    <img src="../assets/img/toggle-white.png" alt="" class="menu-btn">
+    <div class="menu-container">
+      <div class="nav-links">
+        <ul>
+          <li><a href="../index.html">ACCUEIL</a></li>
+          <li><a href="../autres/ticket.html">TICKETS</a></li>
+          <li><a href="../autres/lineup.html">PROGRAMMATION</a></li>
+          <li><a href="../autres/benevole.html">BÉNÉVOLE</a></li>
+          <li><a href="../autres/infos.html">INFOS</a></li>
+        </ul>
+      </div>
     </div>
   </div>
-  <img src="../assets/img/menu-btn.png" alt="" class="menu-btn">
-</div>
+</header>
+
 <!-- ========== fin header ========== -->
-<!-- ========== main ================ -->
-<main class="main-benevole">
-  <section class="section-benevole">
-    <h1>DEVENIR BÉNÉVOLE</h1>
-    <h3>Tu souhaites nous rejoindres dans cette aventure ? </h3>
-    <h3>Inscris-toi juste ici :</h3>
-    <div class="input-box">
-      <input type="text" placeholder="Prénom"required>
-    </div>
-    <div class="input-box">
-      <input type="text" placeholder="Nom" required>
-    </div>
-    <div class="input-box">
-      <input type="int" placeholder="Date de naissance JJ/MM/AA" required>
-    </div>
-    <div class="input-box">
-      <input type="email" placeholder="Mail" required>
-    </div>
-    <div class="checkbox">
-      <label> <input type="checkbox"> Me tenir au courant de l'actualité d' EFREI'STIVAL</label>
-      <label> <input type="checkbox" required> Accepter les conditions générales d'utilisations</label>
+<!-- ========== main ========== -->
 
-    </div>
-    <button class="btn"> Envoyer</button>
-  </section>
+<main class="text-center text-white">
+  <div class="bg-white text-black p-5 vh-75 vw-100">
+    <h1 class="m-5"> BECOME A VOLUNTEER</h1>
+    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam, nam nulla odio omnis quidem quos reiciendis! Accusamus Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet animi aspernatur beatae consequatur dolorem, doloremque ea est eveniet excepturi harum hic nemo nesciunt obcaecati, omnis quas quidem rem, tenetur voluptate! aliquam aperiam blanditiis dignissimos impedinam nulla, qui quos ratione ut voluptatem voluptatum</p>
+  </div>
 
+  <div class="p-5">
+    <h1 class="m-5">WOULD YOU LIKE TO JOIN US ON THIS ADVENTURE ? </h1>
+    <h2 class="m-5">SIGN UP RIGHT HERE :</h2>
+    <form action="traitement.php" method="POST" class="row row-cols-1 justify-content-center text-center">
 
+      <div class="row row-cols-1 row-cols-md-1 justify-content-center text-center">
+        <div class="col form-group pb-4">
+          <input type="text" name="firstName" class="form-control w-75 mx-auto p-2" id="firstname" placeholder="First name" autocomplete="given-name" required />
+        </div>
+
+        <div class="col form-group pb-4">
+          <input type="text" name="lastName" class="form-control w-75 mx-auto p-2" id="name" placeholder="Last name" autocomplete="family-name" required />
+        </div>
+
+        <div class="col form-group pb-4">
+          <input type="number" min="0" class="form-control w-75 mx-auto p-2" name="age" id="age" placeholder="Age" autocomplete="age" required />
+        </div>
+
+        <div class="col form-group pb-4">
+          <input type="email" class="form-control w-75 mx-auto p-2" name="email" id="email" placeholder="Email" autocomplete="email" required />
+        </div>
+
+        <div class="pb-4">
+          <select class=" col form-control w-75 mx-auto" name="jobs" id="jobs" required>
+            <option value="" disabled selected> Choose a job</option>
+            <option value="Ticketing">Ticketing</option>
+            <option value="Eco Team">Eco Team</option>
+            <option value="Beverage">Beverage</option>
+            <option value="Security">Security</option>
+            <option value="All">All</option>
+          </select>
+        </div>
+
+        <div class=" row col form-group b-2p ">
+          <label> <input type="checkbox"> Keep me updated on EFREI'STIVAL news</label>
+        </div>
+
+        <div class=" row col form-group pb-4 ">
+          <label> <input type="checkbox" required> Accept the terms and conditions of use</label>
+        </div>
+      </div>
+
+      <div class="container d-flex justify-content-center w-50 ">
+        <button type="submit" class="col border rounded-5 m-3 pb-1 pt-1 w-50 text-center bg-black text-white">
+          SUBMIT
+        </button>
+      </div>
+    </form>
+  </div>
 </main>
-<!-- ========== fin main ============== -->
-<!-- ========== footer ============== -->
+
+<!-- ========== fin main ========== -->
+<!-- ========== footer ========== -->
+
 <footer>
-  <p>Copyright &copy; 2025 — All rights reserved.</p>
-  <p>Designed by
+  <h6>Copyright &copy; 2025 — All rights reserved.</h6>
+  <h6>Designed by
     <a href="https://www.linkedin.com/in/maxime-madureira/">Maxime MADUREIRA</a>,
     <a href="https://www.linkedin.com/in/chahe-papazian-7584a3282/">Chahe PAPAZIAN</a>,
     <a href="https://www.linkedin.com/in/brouillac/">Julien BROUILLAC</a>,
     <a href="https://www.linkedin.com/in/timeo-laubignat/">Timéo LAUBIGNAT.</a>
-  </p>
+  </h6>
 </footer>
-<!-- ========== fin footer ============== -->
+<!-- ========== fin footer ========== -->
 </body>
 </html>
