--- a/autres/infos.html
+++ b/autres/infos.html
@@ -16,7 +16,7 @@
     <!-- ============ header ========== -->
     <header>
         <div class="navbar">
-            <img src="../assets/img/menu-btn.png" alt="" class="menu-btn">
+            <img src="../assets/img/toggle-white.png" alt="" class="menu-btn">
             <div class="menu-container">
                 <div class="nav-links">
                     <ul>
@@ -37,7 +37,7 @@
     <main class="text-center text-white">
         <h1 class="mt-5 mb-5 vh-60 vw-100"> INFORMATIONS</h1>
 
-        <div class=" row  row-cols-1 row-cols-md-3 row-cols-lg-6 d-flex justify-content-center mt-5 vh-60  ">
+        <div class=" row  row-cols-3 row-cols-md-3 row-cols-lg-6 d-flex justify-content-center mt-5 vh-60  ">
             <div class="col colx m-3">
                 <a href="https://www.linkedin.com/in/brouillac/"> <img src="../assets/img/julien.brouillac.jpg" alt="julien" class="rounded-5 border-2 ">
                   <h2>Julien BROUILLAC</h2>
@@ -89,26 +89,34 @@
             <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio obcaecati odit porro repellat totam ut velit. Consequatur dolor doloribus fugit molestiae obcaecati praesentium quos saepe voluptas. Ad delectus eius maiores.</p>
             <br>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8937.749873045637!2d10.256122351875076!3d36.75407251487173!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12fd49e2ba870e0f%3A0x5ff3585235a59361!2zRm9yw6p0IGRlIFJhZMOocw!5e0!3m2!1sfr!2sfr!4v1742985606016!5m2!1sfr!2sfr"
-                    width="100%" height="50%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="col ">
+                    width="85%"
+                    height="50%"
+                    tyle="border:0;"
+                    allowfullscreen=""
+                    loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"
+                    class="col ">
             </iframe>
         </div>
 
         <div class="p-5">
-            <h1 class="m-5"> CONTACT US </h1>
-            <div class="row row-cols-1  justify-content-center text-center">
+            <h1 class="m-5">CONTACT US</h1>
+            <form action="traitement.php" method="POST" class="row row-cols-1 justify-content-center text-center">
+
                 <div class="row row-cols-1 row-cols-md-1 justify-content-center text-center">
                     <div class="col form-group pb-4">
-                        <input type="text" name="firstName" class="form-control w-75 mx-auto" id="firstname" placeholder="Firstname" autocomplete="family-name" required />
+                        <input type="text" name="firstName" class="form-control w-75 mx-auto" id="firstname" placeholder="First name" autocomplete="given-name" required />
                     </div>
 
                     <div class="col form-group pb-4">
-                        <input type="text" name="lastName" class="form-control w-75 mx-auto" id="name" placeholder="Name" autocomplete="family-name" required />
+                        <input type="text" name="lastName" class="form-control w-75 mx-auto" id="name" placeholder="Last name" autocomplete="family-name" required />
                     </div>
 
                     <div class="col form-group pb-4">
                         <input type="email" class="form-control w-75 mx-auto" name="email" id="email" placeholder="Email" autocomplete="email" required />
                     </div>
                 </div>
+
                 <div class="col form-group pb-4">
                     <input type="text" class="form-control w-75 mx-auto" name="subject" id="subject" placeholder="Subject" required />
                 </div>
@@ -117,13 +125,14 @@
                     <textarea class="form-control w-75 mx-auto" name="message" rows="5" placeholder="Message" required></textarea>
                 </div>
 
-                <div class="prog container d-flex justify-content-center w-100">
-                    <a href="#" class="w-50 text-center d-block">
-                        <div class="col colx border rounded-5 m-3 pb-1 pt-1">SUBMIT</div>
-                    </a>
+                <div class="container d-flex justify-content-center w-50 ">
+                    <button type="submit" class="col border rounded-5 m-3 pb-1 pt-1 w-50 text-center bg-black text-white">
+                        SUBMIT
+                    </button>
                 </div>
-            </div>
+            </form>
         </div>
+
     </main>
 
     <!-- ========== fin main ========== -->
