--- a/autres/lineup.html
+++ b/autres/lineup.html
@@ -16,7 +16,7 @@
 <!-- ============ header ========== -->
     <header>
          <div class="navbar">
-            <img src="../assets/img/toggle-white.png" alt="" class="menu-btn">
+            <img src="../assets/img/toggle-white.png" alt="" class="menu-btn shadow">
             <div class="menu-container">
                 <div class="nav-links mb-5">
                     <ul>
@@ -34,16 +34,23 @@
     <!-- ========== fin header ========== -->
     <!-- ========== main ========== -->
 
-    <main>
-        <div class="text-center text-white ">
-            <h1 class="mt-5"> ALL LINE-UP</h1>
+    <main class="text-center">
+        <div class="bg-secondary text-white bg-transparent vh-50  p-5">
+            <h1 class="pb-5"> DISCOVER THE LINE-UP</h1>
+            <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam, nam nulla odio omnis quidem quos reiciendis! Accusamus Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet animi aspernatur beatae consequatur dolorem, doloremque ea est eveniet excepturi harum hic nemo nesciunt obcaecati, omnis quas quidem rem, tenetur voluptate! aliquam aperiam blanditiis dignissimos impedinam nulla, qui quos ratione ut voluptatem voluptatum</p>
+        </div>
+
+        <div class="text-center text-white m-4 bg-dark  rounded-5 shadow-lg">
+            <h1 class="pt-5 pb-5"> ALL LINE-UP</h1>
             <br>
-            <div class="prog row  row-cols-1 row-cols-md-2 row-cols-lg-5 d-flex justify-content-center ps-5 pe-5">
-                <a href="lineup.html"><div class="col colx border rounded-5 m-3 p-2 ">All </div></a>
-                <a href="../autres/friday.html"><div class="prog-btn col colx border rounded-5 m-3 p-2  ">Friday 1st </div> </a>
-                <a href="../autres/saturday.html"><div class="prog-btn col colx border rounded-5 m-3 p-2">Saturday 2nd </div> </a>
-                <a href="../autres/sunday.html"><div class="prog-btn col colx border rounded-5 m-3 p-2">Sunday 3rd </div></a>
+            <div class="prog row  row-cols-1 row-cols-md-1 row-cols-lg-5 d-flex justify-content-center  ">
+                <a href="lineup.html"><button type="submit" class="col  rounded-5 m-2 p-2 w-75 text-center bg-dark text-white">All</button></a>
+                <a href="../autres/friday.html"><button type="submit" class="col  rounded-5 m-2 p-2 w-75  text-center bg-dark text-white">Friday 1st</button></a>
+                <a href="../autres/saturday.html"><button type="submit" class="col  rounded-5 m-2 p-2 w-75  text-center bg-dark text-white">Saturday 2nd</button></a>
+                <a href="../autres/sunday.html"><button type="submit" class="col  rounded-5 m-2 p-2 w-75 text-center bg-dark text-white">Sunday 3rd</button></a>
             </div>
+
+
             <br>
             <div class=" row  row-cols-3 row-cols-md-4 row-cols-lg-6 d-flex justify-content-center  m-lg-5">
                 <div class="col colx m-3">
@@ -52,61 +59,61 @@
                 </div>
 
                 <div class="col colx m-3">
-                    <a href="./star/1plike140.html"><img src="../assets/img/bart.jpg" alt="El Barto" class="rounded-circle border-2 ">
-                    <p>El Barto</p></a>
+                    <img src="../assets/img/fraise.jpg_large" alt="ASAP" class="rounded-circle border-2 ">
+                    <p>Fraise OASIS</p>
                 </div>
 
                 <div class="col colx m-3 ">
                     <a href="./star/1plike140.html"><img src="../assets/img/Leonide.jpg" alt="Jerry Léonide" class="rounded-circle border-2 ">
-                    <p>Mr. Léonide</p></a>
-                </div>
-
-                <div class="col colx m-3 ">
-                    <a href="./star/1plike140.html"><img src="../assets/img/julien.png" alt="julien Naty" class="rounded-circle border-2 ">
-                    <p>Julien Naty</p></a>
+                        <p>Mr. Léonide</p></a>
                 </div>
 
                 <div class="col colx m-3"><img src="../assets/img/gattouz.png" alt="gattouz" class="rounded-circle border-2 ">
                     <p>Gattouz</p>
                 </div>
 
-                <div class="col colx m-3"><img src="../assets/img/pims.jpg" alt="pims" class="rounded-circle border-2 ">
-                    <p>Maitre Pim's</p>
-                </div>
-
-                <div class="col colx m-3"><img src="../assets/img/pnl.jpg" alt="pnl" class="rounded-circle border-2 ">
-                    <p>PNL</p>
-                </div>
-
-                <div class="col colx m-3"><img src="../assets/img/asap-rocky.jpg" alt="ASAP" class="rounded-circle border-2 ">
-                    <p>Asap Rocky</p>
-                </div>
-
-                <div class="col colx m-3"><img src="../assets/img/macaron.png" alt="macaron" class="rounded-circle border-2 ">
-                    <p>El Dictator</p>
-                </div>
-
-                <div class="col colx m-3"><img src="../assets/img/bee.gif" alt="bee" class="rounded-circle border-2 ">
-                    <p>Killer Bee</p>
-                </div>
-
-                <div class="col colx m-3"><img src="../assets/img/macaron.png" alt="macaron" class="rounded-circle border-2 ">
-                    <p>El Dictator</p>
+                <div class="col colx m-3">
+                    <img src="../assets/img/fave.jpg" alt="macaron" class="rounded-circle border-2 ">
+                    <p> FAVÉÉÉ</p>
                 </div>
 
                 <div class="col colx m-3">
-                    <img src="../assets/img/asap-rocky.jpg" alt="ASAP" class="rounded-circle border-2 ">
-                    <p>Asap Rocky</p>
+                    <a href="./star/1plike140.html"><img src="../assets/img/bart.jpg" alt="El Barto" class="rounded-circle border-2 ">
+                        <p>El Barto</p></a>
+                </div>
+
+                <div class="col colx m-3"><img src="../assets/img/kaaris.PNG" alt="pims" class="rounded-circle border-2 ">
+                    <p>Kaaris</p>
+                </div>
+
+                <div class="col colx m-3"><img src="../assets/img/furry.jpg" alt="ASAP" class="rounded-circle border-2 ">
+                    <p>Timéo la Zanga</p>
+                </div>
+
+                <div class="col colx m-3"><img src="../assets/img/kitty.gif" alt="kitty" class="rounded-circle border-2 ">
+                    <p>Hello Kitty</p>
+                </div>
+
+                <div class="col colx m-3"><img src="../assets/img/jew.PNG" alt="macaron" class="rounded-circle border-2 ">
+                    <p>J.E.W.</p>
+                </div>
+
+                <div class="col colx m-3"><img src="../assets/img/frog.jpg" alt="bee" class="rounded-circle border-2 ">
+                    <p>Crazy Frog</p>
+                </div>
+
+                <div class="col colx m-3"><img src="../assets/img/bassem.jpg" alt="macaron" class="rounded-circle border-2 ">
+                    <p>Bassem</p>
                 </div>
 
                 <div class="col colx m-3">
-                    <img src="../assets/img/asap-rocky.jpg" alt="ASAP" class="rounded-circle border-2 ">
-                    <p>Asap Rocky</p>
+                    <img src="../assets/img/kirby.jpg" alt="ASAP" class="rounded-circle border-2 ">
+                    <p>Astérion</p>
                 </div>
 
-                <div class="col colx m-3">
-                    <img src="../assets/img/macaron.png" alt="macaron" class="rounded-circle border-2 ">
-                    <p>El Dictator</p>
+                <div class="col colx m-3 ">
+                    <a href="./star/1plike140.html"><img src="../assets/img/julien.png" alt="julien Naty" class="rounded-circle border-2 ">
+                        <p>Julien Naty</p></a>
                 </div>
 
                 <div class="col colx m-3">
@@ -116,25 +123,24 @@
             </div>
         </div>
         <br>
-        <br>
-        <div class=" text-center text-black bg-white p-5 vw-100 wh-100">
+        <div class=" text-center text-white bg-secondary m-4 wh-100 rounded-5  ">
             <div class="  m-5">
-                <h1>SCHEDULE</h1>
+                <h1 class="pt-5">SCHEDULE</h1>
             </div>
 
-            <div>
-                <table class="table table-bordered">
+            <div class="w-100">
+                <table class="table table-bordered w-75 w-lg-50 mx-auto">
                     <thead>
                         <tr>
-                            <th class="bg-black text-white">TIME</th>
-                            <th class="bg-black text-white">FRI. 1</th>
-                            <th class="bg-black text-white">SAT. 2</th>
-                            <th class="bg-black text-white">SUN. 3</th>
+                            <th class="bg-dark text-white">TIME</th>
+                            <th class="bg-dark text-white">FRI. 1</th>
+                            <th class="bg-dark text-white">SAT. 2</th>
+                            <th class="bg-dark text-white">SUN. 3</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr >
-                            <td class="bg-black text-white"> 1PM</td>
+                            <td class="bg-dark text-white"> 1PM</td>
                             <td class=" bg-primary text-white"> Open</td>
                             <td class="bg-primary text-white"> Open</td>
                             <td class="bg-primary text-white"> Open</td>
@@ -142,87 +148,87 @@
                     </tbody>
                     <tbody>
                         <tr>
-                            <td class="bg-black text-white"> 2PM - 3PM</td>
-                            <td class="bg-black text-white"> </td>
-                            <td class="bg-black text-white"> </td>
-                            <td class="bg-black text-white"> </td>
+                            <td class="bg-dark text-white"> 2PM - 3PM</td>
+                            <td class="bg-dark text-white"> </td>
+                            <td class="bg-secondary text-white">Killer Bee </td>
+                            <td class="bg-dark text-white"> </td>
                         </tr>
                     </tbody>
                     <tbody>
                         <tr>
-                            <td class="bg-black text-white"> 3PM - 4PM</td>
-                            <td class="bg-black text-white"> </td>
-                            <td class="bg-black text-white"> </td>
-                            <td class="bg-black text-white"> </td>
+                            <td class="bg-dark text-white"> 3PM - 4PM</td>
+                            <td class="bg-secondary text-white"> J.E.W. </td>
+                            <td class="bg-dark text-white"> </td>
+                            <td class="bg-dark text-white"> </td>
                         </tr>
                     </tbody>
                     <tbody>
                         <tr>
-                            <td class="bg-black text-white"> 4PM - 5PM</td>
-                            <td class="bg-black text-white"> </td>
-                            <td class="bg-black text-white"> </td>
-                            <td class="bg-black text-white"> </td>
+                            <td class="bg-dark text-white"> 4PM - 5PM</td>
+                            <td class="bg-dark text-white"> </td>
+                            <td class="bg-secondary text-white">Crazy Frog </td>
+                            <td class="bg-secondary text-white">Astérion </td>
                         </tr>
                     </tbody>
                     <tbody>
                         <tr>
-                            <td class="bg-black text-white"> 5PM - 6PM</td>
-                            <td class="bg-black text-white"> </td>
-                            <td class="bg-black text-white"> </td>
-                            <td class="bg-black text-white"> </td>
+                            <td class="bg-dark text-white"> 5PM - 6PM</td>
+                            <td class="bg-secondary text-white"> FAVÉÉÉ </td>
+                            <td class="bg-secondary text-white">Kaaris </td>
+                            <td class="bg-dark text-white"> </td>
                         </tr>
                     </tbody>
                     <tbody>
                         <tr>
-                            <td class="bg-black text-white"> 6PM - 7PM</td>
-                            <td class="bg-black text-white"> </td>
-                            <td class="bg-black text-white"> </td>
-                            <td class="bg-black text-white"> </td>
+                            <td class="bg-dark text-white"> 6PM - 7PM</td>
+                            <td class="bg-dark text-white"> </td>
+                            <td class="bg-dark text-white"> </td>
+                            <td class="bg-secondary text-white">El Barto</td>
                         </tr>
                     </tbody>
                     <tbody>
                         <tr>
-                            <td class="bg-black text-white"> 7PM - 8PM</td>
-                            <td class="bg-black text-white"> </td>
-                            <td class="bg-black text-white"> </td>
-                            <td class="bg-black text-white"> </td>
+                            <td class="bg-dark text-white"> 7PM - 8PM</td>
+                            <td class="bg-secondary text-white"> Fraise </td>
+                            <td class="bg-dark text-white"> </td>
+                            <td class="bg-secondary text-white"> 1pliké140 prime</td>
                         </tr>
                     </tbody>
                     <tbody>
                         <tr>
-                            <td class="bg-black text-white"> 8PM - 9PM</td>
-                            <td class="bg-black text-white"> </td>
-                            <td class="bg-black text-white"> </td>
-                            <td class="bg-black text-white"> </td>
+                            <td class="bg-dark text-white"> 8PM - 9PM</td>
+                            <td class="bg-secondary text-white"> Bassem</td>
+                            <td class="bg-dark text-white"> </td>
+                            <td class="bg-secondary text-white">Hello Kitty </td>
                         </tr>
                     </tbody>
                     <tbody>
                         <tr>
-                            <td class="bg-black text-white"> 9PM - 10PM</td>
-                            <td class="bg-black text-white"> </td>
-                            <td class="bg-black text-white"> </td>
-                            <td class="bg-black text-white"> </td>
+                            <td class="bg-dark text-white"> 9PM - 10PM</td>
+                            <td class="bg-dark text-white"> </td>
+                            <td class="bg-secondary text-white">Julien Naty </td>
+                            <td class="bg-dark text-white"> </td>
                         </tr>
                     </tbody>
                     <tbody>
                         <tr>
-                            <td class="bg-black text-white"> 10PM - 11PM</td>
-                            <td class="bg-black text-white"> </td>
-                            <td class="bg-black text-white"> </td>
-                            <td class="bg-black text-white"> </td>
+                            <td class="bg-dark text-white"> 10PM - 11PM</td>
+                            <td class="bg-dark text-white"> </td>
+                            <td class="bg-secondary text-white"> Gattouz</td>
+                            <td class="bg-secondary text-white"> Mr. Léonide</td>
                         </tr>
                     </tbody>
                     <tbody>
                         <tr>
-                            <td class="bg-black text-white"> 11PM - 12PM</td>
-                            <td class="bg-black text-white"> </td>
-                            <td class="bg-black text-white"> </td>
-                            <td class="bg-black text-white"> </td>
+                            <td class="bg-dark text-white"> 11PM - 12PM</td>
+                            <td class="bg-secondary text-white">Timéo la Zanga </td>
+                            <td class="bg-dark text-white"> </td>
+                            <td class="bg-dark text-white"> </td>
                         </tr>
                     </tbody>
                     <tbody>
                         <tr>
-                            <td class="bg-black text-white"> 1AM</td>
+                            <td class="bg-dark text-white"> 1AM</td>
                             <td class="bg-danger text-white"> Closed</td>
                             <td class="bg-danger text-white"> Closed</td>
                             <td class="bg-danger text-white"> Closed</td>
