--- a/autres/star/1plike140.html
+++ b/autres/star/1plike140.html
@@ -16,7 +16,7 @@
 <!-- ============ header ========== -->
 <header>
   <div class="navbar">
-    <img src="../../assets/img/menu-btn.png" alt="" class="menu-btn">
+    <img src="../../assets/img/toggle-white.png" alt="" class="menu-btn">
     <div class="menu-container">
       <div class="nav-links mb-5">
         <ul>
@@ -34,111 +34,111 @@
 <!-- ========== fin header ========== -->
 <!-- ========== main ========== -->
 
-<main>
-    <div class="text-center text-white ">
-      <div class=" prog d-flex justify-content-center">
-        <a href="javascript:history.back()" class="w-50 "><div class="col colx border rounded-5 m-3 pb-1 pt-1  "> BACK </div></a>
+<main class="text-center">
+
+    <div class="prog row d-flex justify-content-center pt-5 ">
+        <a href="javascript:history.back()"><button type="submit" class="col  rounded-5 m-2 p-2 w-50 text-center bg-secondary text-white">Back</button></a>
+    </div>
+
+        <div class="bg-dark text-white m-5 rounded-5 p-5">
+          <h1 class="mt-5"> 1PLIKE140</h1>
+
+          <div class=" row  row-cols-1 row-cols-md-2 row-cols-lg-2 d-flex justify-content-center  p-2">
+              <div>
+                <img src="../../assets/img/1plike140.jpg" class="rounded-circle w-50">
+              </div>
+          </div>
+                <p class="pt-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus amet aspernatur, assumenda dolores, laboriosam neque nostrum quae quas quidem, similique ut voluptate! Aliquam dolorum expedita ut vitae! At, ipsam odit.</p></a>
       </div>
-        <h1 class="mt-5"> 1PLIKE140</h1>
-
-        <div class=" row  row-cols-1 row-cols-md-2 row-cols-lg-2 d-flex justify-content-center  p-2">
-            <div>
-              <img src="../../assets/img/1plike140.jpg" class="rounded-circle w-50">
-            </div>
-        </div>
-
-      <div class=" m-5 ps-5 pe-5">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus amet aspernatur, assumenda dolores, laboriosam neque nostrum quae quas quidem, similique ut voluptate! Aliquam dolorum expedita ut vitae! At, ipsam odit.</p></a>
-        </div>
     </div>
     <br>
     <br>
-    <div class=" text-center text-white bg-black p-5 rounded-3 vw-100 wh-100">
+    <div class=" text-center text-white   rounded-3 vw-100 wh-100">
         <div class="  m-5">
            <h1>SCHEDULE</h1>
         </div>
 
         <div class="m-5">
-            <table class="table table-bordered ">
-                <thead>
-                  <tr>
-                    <th>TIME</th>
-                    <th>FRI. 1</th>
-                  </tr>
-                  </thead>
-                  <tbody>
-                  <tr >
-                    <td> 1PM</td>
-                    <td class="table-success"> Open</td>
-                  </tr>
-                  </tbody>
-                  <tbody>
-                  <tr>
-                    <td> 2PM - 3PM</td>
-                    <td> </td>
-                  </tr>
-                  </tbody>
-                  <tbody>
-                  <tr>
-                    <td> 3PM - 4PM</td>
-                    <td> </td>
-                  </tr>
-                  </tbody>
-                  <tbody>
-                  <tr>
-                    <td> 4PM - 5PM</td>
-                    <td> </td>
-                  </tr>
-                  </tbody>
-                  <tbody>
-                  <tr>
-                    <td> 5PM - 6PM</td>
-                    <td> </td>
-                  </tr>
-                  </tbody>
-                  <tbody>
-                  <tr>
-                    <td> 6PM - 7PM</td>
-                    <td> </td>
-                  </tr>
-                  </tbody>
-                  <tbody>
-                  <tr>
-                    <td> 7PM - 8PM</td>
-                    <td> </td>
-                  </tr>
-                  </tbody>
-                  <tbody>
-                  <tr>
-                    <td> 8PM - 9PM</td>
-                    <td> </td>
-                  </tr>
-                  </tbody>
-                  <tbody>
-                  <tr>
-                    <td> 9PM - 10PM</td>
-                    <td> </td>
-                  </tr>
-                  </tbody>
-                  <tbody>
-                  <tr>
-                    <td> 10PM - 11PM</td>
-                    <td> </td>
-                  </tr>
-                  </tbody>
-                  <tbody>
-                  <tr>
-                      <td> 11PM - 12PM</td>
-                      <td> </td>
-                  </tr>
-                  </tbody>
-                  <tbody>
-                    <tr>
-                        <td> 1AM</td>
-                        <td class="table-danger"> Closed</td>
-                    </tr>
-                  </tbody>
-            </table>
+          <table class="table table-bordered w-75 w-lg-50 mx-auto">
+            <thead>
+            <tr>
+              <th class="bg-dark text-white">TIME</th>
+              <th class="bg-dark text-white">SUN. 3</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr >
+              <td class="bg-dark text-white"> 1PM</td>
+              <td class="bg-primary text-white"> Open</td>
+            </tr>
+            </tbody>
+            <tbody>
+            <tr>
+              <td class="bg-dark text-white"> 2PM - 3PM</td>
+              <td class="bg-dark text-white"> </td>
+            </tr>
+            </tbody>
+            <tbody>
+            <tr>
+              <td class="bg-dark text-white"> 3PM - 4PM</td>
+              <td class="bg-dark text-white"> </td>
+            </tr>
+            </tbody>
+            <tbody>
+            <tr>
+              <td class="bg-dark text-white"> 4PM - 5PM</td>
+              <td class="bg-secondary text-white">Astérion </td>
+            </tr>
+            </tbody>
+            <tbody>
+            <tr>
+              <td class="bg-dark text-white"> 5PM - 6PM</td>
+              <td class="bg-dark text-white"> </td>
+            </tr>
+            </tbody>
+            <tbody>
+            <tr>
+              <td class="bg-dark text-white"> 6PM - 7PM</td>
+              <td class="bg-secondary text-white">El Barto</td>
+            </tr>
+            </tbody>
+            <tbody>
+            <tr>
+              <td class="bg-dark text-white"> 7PM - 8PM</td>
+              <td class="bg-secondary text-white"> 1pliké140 prime</td>
+            </tr>
+            </tbody>
+            <tbody>
+            <tr>
+              <td class="bg-dark text-white"> 8PM - 9PM</td>
+              <td class="bg-secondary text-white">Hello Kitty </td>
+            </tr>
+            </tbody>
+            <tbody>
+            <tr>
+              <td class="bg-dark text-white"> 9PM - 10PM</td>
+              <td class="bg-dark text-white"> </td>
+            </tr>
+            </tbody>
+            <tbody>
+            <tr>
+              <td class="bg-dark text-white"> 10PM - 11PM</td>
+              <td class="bg-secondary text-white"> Mr. Léonide</td>
+            </tr>
+            </tbody>
+            <tbody>
+            <tr>
+              <td class="bg-dark text-white"> 11PM - 12PM</td>
+              <td class="bg-dark text-white"> </td>
+            </tr>
+            </tbody>
+            <tbody>
+            <tr>
+              <td class="bg-dark text-white"> 1AM</td>
+              <td class="bg-danger text-white"> Closed</td>
+            </tr>
+            </tbody>
+          </table>
           </div>
       </div>
   </main>
