--- a/autres/infos.html
+++ b/autres/infos.html
@@ -16,7 +16,7 @@
     <!-- ============ header ========== -->
     <header>
         <div class="navbar">
-            <img src="../assets/img/toggle-white.png" alt="" class="menu-btn">
+            <img src="../assets/img/toggle-white.png" alt="" class="menu-btn shadow">
             <div class="menu-container">
                 <div class="nav-links">
                     <ul>
@@ -35,9 +35,25 @@
     <!-- ========== main ========== -->
 
     <main class="text-center text-white">
-        <h1 class="mt-5 mb-5 vh-60 vw-100"> INFORMATIONS</h1>
 
-        <div class=" row  row-cols-3 row-cols-md-3 row-cols-lg-6 d-flex justify-content-center mt-5 vh-60  ">
+        <div class="p-5">
+            <h1 class="m-5"> OUR ENGAGEMENTS</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab architecto asperiores aspernatur excepturi id, inventore libero magnam minima natus nihil placeat, possimus provident suscipit totam ut veritatis vero vitae. Nobis?adipisicing elit. Amet architecto, autem cum, dolores doloribus esse fugiat illo illum iste iure labore magni modi provident soluta voluptas voluptatibus voluptatum. Omnis, sapiente!</p>
+            <br>
+        </div>
+
+        <div class="bg-dark text-white  p-5 vh-60 m-5 rounded-5 shadow">
+            <h1 class="mb-5"> FREE PALESTINE !</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet architecto, autem cum, dolores doloribus esse fugiat illo illum iste iure labore magni modi provident soluta voluptas voluptatibus voluptatum. Omnis, sapiente!</p>
+            <br>
+            <div class="prog container d-flex justify-content-center w-75">
+                <button type="submit" class="col  rounded-5 m-3 pb-1 pt-1  text-center bg-dark text-white">
+                    DONATE NOW
+                </button>
+            </div>
+        </div>
+
+        <div class=" row  row-cols-3 row-cols-md-3 row-cols-lg-6 d-flex justify-content-center pt-5 vh-60  ">
             <div class="col colx m-3">
                 <a href="https://www.linkedin.com/in/brouillac/"> <img src="../assets/img/julien.brouillac.jpg" alt="julien" class="rounded-5 border-2 ">
                   <h2>Julien BROUILLAC</h2>
@@ -63,43 +79,7 @@
             </div>
         </div>
 
-        <br>
-        <br>
-
-        <div class="bg-white text-black p-5 vh-60 vw-100">
-            <h1 class="m-5"> OUR ENGAGEMENTS</h1>
-            <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam, nam nulla odio omnis quidem quos reiciendis! Accusamus Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet animi aspernatur beatae consequatur dolorem, doloremque ea est eveniet excepturi harum hic nemo nesciunt obcaecati, omnis quas quidem rem, tenetur voluptate! aliquam aperiam blanditiis dignissimos impedinam nulla, qui quos ratione ut voluptatem voluptatum</p>
-        </div>
-
-        <div class="p-5">
-            <h1 class="m-5"> FREE PALESTINE !</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet architecto, autem cum, dolores doloribus esse fugiat illo illum iste iure labore magni modi provident soluta voluptas voluptatibus voluptatum. Omnis, sapiente!</p>
-            <br>
-            <div class="prog container d-flex justify-content-center ">
-                <a href="#" class="w-50 text-center">
-                    <div class="col colx border rounded-5 m-3 pb-1 pt-1">DONATE NOW</div>
-                </a>
-            </div>
-        </div>
-
-        <br>
-
-        <div class="bg-white text-black p-5 vh-100 vw-100">
-            <h1 class="m-5 "> WHERE TO FIND US ?</h1>
-            <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio obcaecati odit porro repellat totam ut velit. Consequatur dolor doloribus fugit molestiae obcaecati praesentium quos saepe voluptas. Ad delectus eius maiores.</p>
-            <br>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8937.749873045637!2d10.256122351875076!3d36.75407251487173!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12fd49e2ba870e0f%3A0x5ff3585235a59361!2zRm9yw6p0IGRlIFJhZMOocw!5e0!3m2!1sfr!2sfr!4v1742985606016!5m2!1sfr!2sfr"
-                    width="85%"
-                    height="50%"
-                    tyle="border:0;"
-                    allowfullscreen=""
-                    loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"
-                    class="col ">
-            </iframe>
-        </div>
-
-        <div class="p-5">
+        <div class="p-5 m-5 bg-dark rounded-5 shadow-lg ">
             <h1 class="m-5">CONTACT US</h1>
             <form action="traitement.php" method="POST" class="row row-cols-1 justify-content-center text-center">
 
@@ -126,7 +106,7 @@
                 </div>
 
                 <div class="container d-flex justify-content-center w-50 ">
-                    <button type="submit" class="col border rounded-5 m-3 pb-1 pt-1 w-50 text-center bg-black text-white">
+                    <button type="submit" class="col rounded-5 m-3 pb-1 pt-1 w-50 text-center bg-dark text-white">
                         SUBMIT
                     </button>
                 </div>
