--- a/autres/sunday.html
+++ b/autres/sunday.html
@@ -5,25 +5,24 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Programmation</title>
+  <title>Sunday</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="../assets/style.css">
   <script src="../assets/index.js" defer></script>
-
 </head>
 
 <body>
 <!-- ============ header ========== -->
 <header>
   <div class="navbar">
-    <img src="../assets/img/toggle-white.png" alt="" class="menu-btn">
+    <img src="../assets/img/toggle-white.png" alt="" class="menu-btn shadow">
     <div class="menu-container">
       <div class="nav-links mb-5">
         <ul>
           <li><a href="../index.html">ACCUEIL</a></li>
           <li><a href="../autres/ticket.html">TICKETS</a></li>
-          <li><a href="lineup.html">PROGRAMMATION</a></li>
+          <li><a href="../autres/lineup.html">PROGRAMMATION</a></li>
           <li><a href="../autres/benevole.html">BÉNÉVOLE</a></li>
           <li><a href="../autres/infos.html">INFOS</a></li>
         </ul>
@@ -31,142 +30,146 @@
     </div>
   </div>
 </header>
+
 <!-- ========== fin header ========== -->
 <!-- ========== main ========== -->
 
-<main>
-  <div class="text-center text-white ">
-    <h1 class="mt-5"> SUNDAY 3rd AUGUST</h1>
-    <br>
-    <div class="prog row  row-cols-1 row-cols-md-2 row-cols-lg-5 d-flex justify-content-center ps-5 pe-5">
-      <a href="lineup.html"><div class="col colx border rounded-5 m-3 p-2 ">All </div></a>
-      <a href="../autres/friday.html"><div class="prog-btn col colx border rounded-5 m-3 p-2  ">Friday 1st </div> </a>
-      <a href="../autres/saturday.html"><div class="prog-btn col colx border rounded-5 m-3 p-2">Saturday 2nd </div> </a>
-      <a href="../autres/sunday.html"><div class="prog-btn col colx border rounded-5 m-3 p-2">Sunday 3rd </div></a>
-    </div>
-    <br>
-    <div class=" row  row-cols-1 row-cols-md-3 row-cols-lg-6 d-flex justify-content-center mt-5 me-5 ms-5 me-5  p-2">
-      <div class="col colx m-3">
-        <a href="./star/1plike140.html"> <img src="../assets/img/1plike140.jpg" alt="1plike140" class="rounded-circle border-2 ">
-          <p>1plike Prime</p>
-        </a>
-      </div>
+<main class="text-center">
+  <div class="bg-secondary text-white bg-transparent vh-50  p-5">
+    <h1 class="pb-5"> DISCOVER THE LINE-UP</h1>
+    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam, nam nulla odio omnis quidem quos reiciendis! Accusamus Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet animi aspernatur beatae consequatur dolorem, doloremque ea est eveniet excepturi harum hic nemo nesciunt obcaecati, omnis quas quidem rem, tenetur voluptate! aliquam aperiam blanditiis dignissimos impedinam nulla, qui quos ratione ut voluptatem voluptatum</p>
+  </div>
 
+  <div class="text-center text-white m-4 bg-dark  rounded-5 shadow-lg">
+    <h1 class="pt-5 pb-5"> SUNDAY 3rd AUGUST</h1>
+    <br>
+    <div class="prog row  row-cols-1 row-cols-md-1 row-cols-lg-5 d-flex justify-content-center  ">
+      <a href="lineup.html"><button type="submit" class="col  rounded-5 m-2 p-2 w-75 text-center bg-dark text-white">All</button></a>
+      <a href="../autres/friday.html"><button type="submit" class="col  rounded-5 m-2 p-2 w-75  text-center bg-dark text-white">Friday 1st</button></a>
+      <a href="../autres/saturday.html"><button type="submit" class="col  rounded-5 m-2 p-2 w-75  text-center bg-dark text-white">Saturday 2nd</button></a>
+      <a href="../autres/sunday.html"><button type="submit" class="col  rounded-5 m-2 p-2 w-75 text-center bg-dark text-white">Sunday 3rd</button></a>
+    </div>
+
+
+    <br>
+    <div class=" row  row-cols-3 row-cols-md-4 row-cols-lg-6 d-flex justify-content-center  m-lg-5">
       <div class="col colx m-3">
-        <a href="./star/1plike140.html"><img src="../assets/img/bart.jpg" alt="El Barto" class="rounded-circle border-2 ">
-          <p>El Barto</p>
-        </a>
+        <a href="./star/1plike140.html"> <img src="../assets/img/1plike140.jpg" alt="1plike140" class="rounded-circle  ">
+          <p>1plike Prime</p></a>
       </div>
 
       <div class="col colx m-3 ">
         <a href="./star/1plike140.html"><img src="../assets/img/Leonide.jpg" alt="Jerry Léonide" class="rounded-circle border-2 ">
-          <p>Mr. Léonide</p>
-        </a>
+          <p>Mr. Léonide</p></a>
       </div>
 
-      <div class="col colx m-3 ">
-        <a href="./star/1plike140.html"><img src="../assets/img/julien.png" alt="julien Naty" class="rounded-circle border-2 ">
-          <p>Julien Naty</p>
-        </a>
+      <div class="col colx m-3">
+        <a href="./star/1plike140.html"><img src="../assets/img/bart.jpg" alt="El Barto" class="rounded-circle border-2 ">
+          <p>El Barto</p></a>
       </div>
 
-      <div class="col colx m-3 ">
-        <a href="./star/1plike140.html"><img src="../assets/img/julien.png" alt="julien Naty" class="rounded-circle border-2 ">
-          <p>Julien Naty</p>
-        </a>
+      <div class="col colx m-3"><img src="../assets/img/kitty.gif" alt="kitty" class="rounded-circle border-2 ">
+        <p>Hello Kitty</p>
+      </div>
+
+      <div class="col colx m-3">
+        <img src="../assets/img/kirby.jpg" alt="ASAP" class="rounded-circle border-2 ">
+        <p>Astérion</p>
       </div>
     </div>
   </div>
-
-  <div class=" text-center text-white bg-black p-5 rounded-3 vw-100 wh-100">
-    <div class="container mt-5">
-      <h2>SCHEDULE</h2>
+  <br>
+  <div class=" text-center text-white bg-secondary m-4 wh-100 rounded-5">
+    <div class="m-5">
+      <h1 class="pt-5">SCHEDULE</h1>
     </div>
 
-    <div class="container mt-5">
-      <table class="table table-bordered table-dark">
+    <div class="w-100">
+      <table class="table table-bordered w-75 w-lg-50 mx-auto">
         <thead>
         <tr>
-          <th>TIME</th>
-          <th>SUNDAY 3rd</th>
+          <th class="bg-dark text-white">TIME</th>
+          <th class="bg-dark text-white">SUN. 3</th>
         </tr>
         </thead>
         <tbody>
         <tr >
-          <td> 1PM</td>
-          <td class="table-success"> Open</td>
+          <td class="bg-dark text-white"> 1PM</td>
+          <td class="bg-primary text-white"> Open</td>
         </tr>
         </tbody>
         <tbody>
         <tr>
-          <td> 2PM - 3PM</td>
-          <td> </td>
+          <td class="bg-dark text-white"> 2PM - 3PM</td>
+          <td class="bg-dark text-white"> </td>
         </tr>
         </tbody>
         <tbody>
         <tr>
-          <td> 3PM - 4PM</td>
-          <td> </td>
+          <td class="bg-dark text-white"> 3PM - 4PM</td>
+          <td class="bg-dark text-white"> </td>
         </tr>
         </tbody>
         <tbody>
         <tr>
-          <td> 4PM - 5PM</td>
-          <td> </td>
+          <td class="bg-dark text-white"> 4PM - 5PM</td>
+          <td class="bg-secondary text-white">Astérion </td>
         </tr>
         </tbody>
         <tbody>
         <tr>
-          <td> 5PM - 6PM</td>
-          <td> </td>
+          <td class="bg-dark text-white"> 5PM - 6PM</td>
+          <td class="bg-dark text-white"> </td>
         </tr>
         </tbody>
         <tbody>
         <tr>
-          <td> 6PM - 7PM</td>
-          <td> </td>
+          <td class="bg-dark text-white"> 6PM - 7PM</td>
+          <td class="bg-secondary text-white">El Barto</td>
         </tr>
         </tbody>
         <tbody>
         <tr>
-          <td> 7PM - 8PM</td>
-          <td> </td>
+          <td class="bg-dark text-white"> 7PM - 8PM</td>
+          <td class="bg-secondary text-white"> 1pliké140 prime</td>
         </tr>
         </tbody>
         <tbody>
         <tr>
-          <td> 8PM - 9PM</td>
-          <td> </td>
+          <td class="bg-dark text-white"> 8PM - 9PM</td>
+          <td class="bg-secondary text-white">Hello Kitty </td>
         </tr>
         </tbody>
         <tbody>
         <tr>
-          <td> 9PM - 10PM</td>
-          <td> </td>
+          <td class="bg-dark text-white"> 9PM - 10PM</td>
+          <td class="bg-dark text-white"> </td>
         </tr>
         </tbody>
         <tbody>
         <tr>
-          <td> 10PM - 11PM</td>
-          <td> </td>
+          <td class="bg-dark text-white"> 10PM - 11PM</td>
+          <td class="bg-secondary text-white"> Mr. Léonide</td>
         </tr>
         </tbody>
         <tbody>
         <tr>
-          <td> 11PM - 12PM</td>
-          <td> </td>
+          <td class="bg-dark text-white"> 11PM - 12PM</td>
+          <td class="bg-dark text-white"> </td>
         </tr>
         </tbody>
         <tbody>
         <tr>
-          <td> 1AM</td>
-          <td class="table-danger"> Closed</td>
+          <td class="bg-dark text-white"> 1AM</td>
+          <td class="bg-danger text-white"> Closed</td>
         </tr>
         </tbody>
       </table>
     </div>
   </div>
 </main>
+<!-- ========== fin main ========== -->
+<!-- ========== footer ========== -->
 
 <footer>
   <p>Copyright &copy; 2025 — All rights reserved.</p>
@@ -177,5 +180,6 @@
     <a href="https://www.linkedin.com/in/timeo-laubignat/">Timéo LAUBIGNAT.</a>
   </p>
 </footer>
+<!-- ========== fin footer ========== -->
 </body>
 </html>
