--- a/index.html
+++ b/index.html
@@ -51,6 +51,20 @@
         <p id="countdown" class="timer"></p>
     </section>
 
+<div class="bg-white text-black p-5 vh-100 m-5 rounded-5">
+    <h1 class="m-5 "> WHERE TO FIND US ?</h1>
+    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio obcaecati odit porro repellat totam ut velit. Consequatur dolor doloribus fugit molestiae obcaecati praesentium quos saepe voluptas. Ad delectus eius maiores.</p>
+    <br>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8937.749873045637!2d10.256122351875076!3d36.75407251487173!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12fd49e2ba870e0f%3A0x5ff3585235a59361!2zRm9yw6p0IGRlIFJhZMOocw!5e0!3m2!1sfr!2sfr!4v1742985606016!5m2!1sfr!2sfr"
+            width="85%"
+            height="50%"
+            tyle="border:0;"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+            class="col ">
+    </iframe>
+</div>
 </main>
 <!-- ========== fin main ============== -->
 <!-- ========== footer ============== -->
